test: TDD 기반 포인트 로그 테스트 코드 작성
- 테스트 코드 작성 중 포인트 선물 시 포인트 로그가 저장되지 않는 문제 발견 후 해결

issue: #262